[tool.poetry]
name = "reactpy-table"
version = "0.1.0"
description = ""
authors = ["Steve Jones <jonesst2608@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
reactpy = "^1.0.2"

[tool.poetry.group.dev.dependencies]
pytest-timeout = "2.2.0"
fastapi = "^0.109.0"
playwright = "1.41.1"
pytest = "^7.4.4"
pytest-asyncio = "^0.23.3"
starlette = ">=0.13.6"
trio = "^0.24.0"
twine = "^4.0.2"
uvicorn = {extras = ["standard"], version = ">=0.19.0"}


[tool.pytest.ini_options]
testpaths = "tests"
log_cli_level = "INFO"
filterwarnings = "ignore::DeprecationWarning"

# -r Show extra test summary info as specified by chars: 
#   (s)kipped, 
#   (x)failed, 
#   (X)passed, 
# addopts = "-rsxX"

# asyncio_mode = "auto"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
